<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PlayerDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPlayerBG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="140dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            tools:src="@drawable/ic_league"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weight"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@android:color/black"
                tools:text="68"/>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                tools:text="1.68"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvPostition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="POSITION"/>

        <TextView
            android:id="@+id/tvNation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            tools:text="POSITION"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            tools:text="PLAYER DESCRIPTION"/>

    </LinearLayout>

</ScrollView>